v2.0.2 (2019.xx.xx)
  - Update SQLite database engine to version 3.28.0
  - Add "Flag Recorded TV streams as real-time" advanced setting
  - Prevent multiple Kodi threads from simultaneously requesting EPG data
  - Fix bug that allowed extraneous EPG entries to be transferred to Kodi
  - Fix bug introduced in v2.0.0 that prevented setting channel visibility flags

v2.0.1 (2019.04.12)
  - Version number consistency build; no changes

v2.0.0 (2019.04.09)
  - Update SQLite database engine to version 3.27.2
  - Update cURL library to version 7.64.1
  - Add "Invalidate tuner device authorization codes after" advanced setting
  - Change default discovery interval from 5 minutes to 1 hour
  - Change default lineup discovery interval from 10 minutes to 45 minutes
  - Migrate addon settings definition to new format; add help strings for all settings
  - Remove "Disable discovery of HDHomeRun RECORD devices" advanced setting
  - Retrieve DVR service authorization flag for tuner(s) during device discovery
  - Maintain database timestamps indicating when all backend data was last discovered
  - Log discovered HDHomeRun devices after device discovery completes
  - Prevent redundant rediscovery of devices and channel lineups during PVR startup task
  - Use separate HTTP connection and DNS lookup cache for Electronic Program Guide (EPG) requests
  - Block attempts to add/remove/update recording rules if no tuners with DVR authorization were discovered
  - Prevent access to all backend services when no valid device authorization code(s) are available
  - Fix bug preventing recording rule discovery from executing if "Delete expired date/time recording rules after" setting has changed
  - Fix bug causing unnecessary timer updates when series episodes are available via multiple channels
  - Fix bug that allowed deleted timers to remain listed if multiple timer rules were associated with a series